<resources>
    <string name="app_name">RubyPP</string>

    <!--For recycler view's item-->
    <string name="picture_peed">Peed</string>
    <string name="picture_pooped">Pooped</string>
    <string name="picture_ate">Ate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="update_dialog_title">What Ruby did</string>
    <string name="main_action_menu_refresh">Refresh</string>
    <string name="peed">Peed</string>
    <string name="pooped">Pooped</string>
    <string name="ate">Ate</string>
    <string name="time_picker_dialog_title">Pick up the right time</string>
    <string name="default_database_message">Finished</string>
    <string name="get_information_finished_message">Updated to new data</string>
    <string name="default_name_key">default_name_key</string>
    <string name="input_name_dialog_title">Please enter you name</string>
    <string name="input_name_dialog_name_view_hint">Please enter your name here</string>
    <string name="input_name_empty_message">You have to enter your name</string>
    <string name="insert_record_finished_message">Insert Succeed</string>
    <string name="update_record_finished_message">Update Succeed</string>
    <string name="picture_peed_inside">Peed Inside</string>
    <string name="picture_pooped_inside">Pooped Inside</string>
    <string name="date_picker_dialog_title">Pick up the right date</string>
    <string name="main_action_menu_medal">Statistic</string>
    <string name="statistic_dialog_title">The medal belongs</string>

    <!--Array list for update dialog-->
    <string-array name="update_dialog_array">
        <item>Peed</item>
        <item>Pooped</item>
        <item>Ate</item>
        <item>Peed Inside</item>
        <item>Pooped Inside</item>
    </string-array>

</resources>
