<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler_row_time"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler_row_peed"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginRight="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:contentDescription="@string/picture_peed"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler_row_pooped"
        android:layout_marginLeft="2.5dp"
        android:layout_marginStart="2.5dp"
        android:layout_marginRight="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:contentDescription="@string/picture_pooped"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler_row_ate"
        android:layout_marginLeft="2.5dp"
        android:layout_marginStart="2.5dp"
        android:contentDescription="@string/picture_ate"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_recycler_row_date"
        android:layout_gravity="center"
        android:gravity="end"/>

</LinearLayout>